--- a/src/new-message.html
+++ b/src/new-message.html
@@ -6,7 +6,7 @@
         </div>
         <div class="form-group">
             <label for="ln">Message</label>
-            <input type="text" value.bind="text" disabled.bind="!sender" class="form-control" id="ln" placeholder="message">
+            <input type="text" value.bind="message" disabled.bind="!sender" class="form-control" id="ln" placeholder="message">
         </div>
         <button type="submit" class="btn btn-default" disabled.bind="!validation.result.isValid">Submit</button>
     </form>
